update endpoint to GET index status and update index, search tests to include getting index creation status

--- a/config/config.indextest.yaml
+++ b/config/config.indextest.yaml
@@ -4,4 +4,4 @@ server:
 database:
   kvdb_path: "/indextest/kv.db"
   index_path: "/indextest/search.index"
-  storage_path: "./.wheresthatstorage"
+  storage_path: "./.wheresthatstorage/test"
